--- a/Py01_training_single_cancer_vs_control_readFeature.ipynb
+++ b/Py01_training_single_cancer_vs_control_readFeature.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 2/4194 [00:20<12:04:50, 10.37s/it]"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -39,16 +47,11 @@
     "\n",
     "path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions\"\n",
     "\n",
+    "path_to_py01_output = os.path.join(path_to_main_output, \"py01_output\")\n",
+    "os.system(\"mkdir -p {}\".format(path_to_py01_output))\n",
+    "\n",
     "all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "def classify_read(alpha, region):\n",
     "    region_type = check_region[check_region[\"CpG\"] == region][\"region_type\"].values[0]\n",
     "    if region_type == \"hypo\":\n",
@@ -62,11 +65,6 @@
     "        else:\n",
     "            return \"none\"\n",
     "\n",
-    "tmpdf = pd.read_csv(all_read_files[0], sep=\",\", index_col=0)\n",
-    "\n",
-    "tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
-    "tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
-    "\n",
     "def assign_read_type(x, thres_hypo, thres_hyper):\n",
     "    if x < thres_hypo:\n",
     "        return \"hypo\"\n",
@@ -74,18 +72,22 @@
     "        return \"hyper\"\n",
     "    else:\n",
     "        return \"none\"\n",
-    "tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
     "\n",
-    "tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
-    "\n"
+    "for file in tqdm(all_read_files):\n",
+    "    tmpdf = pd.read_csv(file, sep=\",\", index_col=0)\n",
+    "\n",
+    "    tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "    tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
+    "\n",
+    "    tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "\n",
+    "    tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
+    "\n",
+    "    count_candi_reads = tmpdf.groupby([\"region\", \"read_classification\"])[\"methyl_string\"].count().reset_index().pivot(index = \"region\", columns = \"read_classification\", values = \"methyl_string\").fillna(0)\n",
+    "    count_candi_reads[\"fraction\"] = count_candi_reads[[\"candi\", \"none\"]].apply(lambda x: x[0]/(x[0] + x[1]), axis = 1)\n",
+    "\n",
+    "    count_candi_reads.to_csv(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
