--- a/Py01_training_single_cancer_vs_control_readFeature.ipynb
+++ b/Py01_training_single_cancer_vs_control_readFeature.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 2/4194 [00:20<12:04:50, 10.37s/it]"
+      "  6%|▋         | 3/47 [01:02<16:10, 22.06s/it]"
      ]
     }
    ],
@@ -40,54 +40,259 @@
     "thres_hypo = 0.3\n",
     "thres_hyper = 0.6\n",
     "\n",
-    "input_cancer_class = \"Liver\"\n",
-    "check_region = pd.read_excel(os.path.join(path_to_difftest_output, \"diff_test_{}_region_summary.xlsx\".format(input_cancer_class)))\n",
+    "# input_cancer_class = \"Liver\"\n",
+    "for input_cancer_class in [\"Liver\", \"Breast\", \"CRC\", \"Lung\", \"Gastric\"]:\n",
+    "    check_region = pd.read_excel(os.path.join(path_to_difftest_output, \"diff_test_{}_region_summary.xlsx\".format(input_cancer_class)))\n",
     "\n",
-    "metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
+    "    metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
     "\n",
-    "path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions\"\n",
+    "    path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions\"\n",
     "\n",
-    "path_to_py01_output = os.path.join(path_to_main_output, \"py01_output\")\n",
-    "os.system(\"mkdir -p {}\".format(path_to_py01_output))\n",
+    "    path_to_py01_output = os.path.join(path_to_main_output, \"py01_output\")\n",
+    "    os.system(\"mkdir -p {}\".format(path_to_py01_output))\n",
     "\n",
-    "all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
+    "    all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
     "\n",
-    "def classify_read(alpha, region):\n",
-    "    region_type = check_region[check_region[\"CpG\"] == region][\"region_type\"].values[0]\n",
-    "    if region_type == \"hypo\":\n",
-    "        if alpha < thres_hypo:\n",
-    "            return \"candi\"\n",
+    "    def classify_read(alpha, region):\n",
+    "        region_type = check_region[check_region[\"CpG\"] == region][\"region_type\"].values[0]\n",
+    "        if region_type == \"hypo\":\n",
+    "            if alpha < thres_hypo:\n",
+    "                return \"candi\"\n",
+    "            else:\n",
+    "                return \"none\"\n",
+    "        elif region_type == \"hyper\":\n",
+    "            if alpha > thres_hyper:\n",
+    "                return \"candi\"\n",
+    "            else:\n",
+    "                return \"none\"\n",
+    "\n",
+    "    def assign_read_type(x, thres_hypo, thres_hyper):\n",
+    "        if x < thres_hypo:\n",
+    "            return \"hypo\"\n",
+    "        elif x > thres_hyper:\n",
+    "            return \"hyper\"\n",
     "        else:\n",
     "            return \"none\"\n",
-    "    elif region_type == \"hyper\":\n",
-    "        if alpha > thres_hyper:\n",
-    "            return \"candi\"\n",
+    "\n",
+    "    for file in tqdm([item for item in all_read_files if metadata[metadata[\"SampleID\"] == item.name.split(\".\")[0]][\"Label\"].values[0] == input_cancer_class]):\n",
+    "        if os.path.isfile(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0]))) == False:\n",
+    "            tmpdf = pd.read_csv(file, sep=\",\", index_col=0)\n",
+    "\n",
+    "            tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "            tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
+    "\n",
+    "            tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "\n",
+    "            tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
+    "\n",
+    "            count_candi_reads = tmpdf.groupby([\"region\", \"read_classification\"])[\"methyl_string\"].count().reset_index().pivot(index = \"region\", columns = \"read_classification\", values = \"methyl_string\").fillna(0)\n",
+    "            count_candi_reads[\"fraction\"] = count_candi_reads[[\"candi\", \"none\"]].apply(lambda x: x[0]/(x[0] + x[1]), axis = 1)\n",
+    "\n",
+    "            count_candi_reads.to_csv(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])))\n",
     "        else:\n",
-    "            return \"none\"\n",
-    "\n",
-    "def assign_read_type(x, thres_hypo, thres_hyper):\n",
-    "    if x < thres_hypo:\n",
-    "        return \"hypo\"\n",
-    "    elif x > thres_hyper:\n",
-    "        return \"hyper\"\n",
-    "    else:\n",
-    "        return \"none\"\n",
-    "\n",
-    "for file in tqdm(all_read_files):\n",
-    "    tmpdf = pd.read_csv(file, sep=\",\", index_col=0)\n",
-    "\n",
-    "    tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
-    "    tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
-    "\n",
-    "    tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
-    "\n",
-    "    tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
-    "\n",
-    "    count_candi_reads = tmpdf.groupby([\"region\", \"read_classification\"])[\"methyl_string\"].count().reset_index().pivot(index = \"region\", columns = \"read_classification\", values = \"methyl_string\").fillna(0)\n",
-    "    count_candi_reads[\"fraction\"] = count_candi_reads[[\"candi\", \"none\"]].apply(lambda x: x[0]/(x[0] + x[1]), axis = 1)\n",
-    "\n",
-    "    count_candi_reads.to_csv(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])))"
+    "            print(\" File {} exists\".format(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0]))))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>TM_BAM</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Set</th>\n",
+       "      <th>Run_TM</th>\n",
+       "      <th>Run_GW</th>\n",
+       "      <th>TM_COV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MYAAAA03</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/align/14-MYAAAA...</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>Recent_unseen2_GW_direct</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MYAAAA06</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/align/62-MYAAAA...</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>Recent_unseen2_GW_direct</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MYAAAA08</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/align/16-MYAAAA...</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>Recent_unseen2_GW_direct</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MYAAAA10</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/align/64-MYAAAA...</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>Recent_unseen2_GW_direct</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>R4551</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MYAAAA11</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4563/align/43-MYAAAA...</td>\n",
+       "      <td>Breast</td>\n",
+       "      <td>Recent_unseen2_GW_direct</td>\n",
+       "      <td>R4563</td>\n",
+       "      <td>R4563</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4563/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7381</th>\n",
+       "      <td>K0AAAL02</td>\n",
+       "      <td>/mnt/BACKUP_NAS05/ECDTM_repo/R4823/align/103-K...</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>Recent_unseen4</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>/mnt/BACKUP_NAS05/ECDTM_repo/R4823/methylation...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7382</th>\n",
+       "      <td>K0AAAL05</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4823/align/106-K0AAA...</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>Recent_unseen4</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4823/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7383</th>\n",
+       "      <td>K0AAAL06</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4823/align/107-K0AAA...</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>Recent_unseen4</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4823/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7384</th>\n",
+       "      <td>K0AAAL07</td>\n",
+       "      <td>/mnt/BACKUP_NAS05/ECDTM_repo/R4823/align/108-K...</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>Recent_unseen4</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>R4823</td>\n",
+       "      <td>/mnt/BACKUP_NAS05/ECDTM_repo/R4823/methylation...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7385</th>\n",
+       "      <td>K0AAAL09</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4839/align/90-K0AAAL...</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>Recent_unseen4</td>\n",
+       "      <td>R4839</td>\n",
+       "      <td>R4839</td>\n",
+       "      <td>/mnt/GS_NAS05/ECDTM_repo/R4839/methylation_ext...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7386 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      SampleID                                             TM_BAM    Label  \\\n",
+       "0     MYAAAA03  /mnt/GS_NAS05/ECDTM_repo/R4551/align/14-MYAAAA...   Breast   \n",
+       "1     MYAAAA06  /mnt/GS_NAS05/ECDTM_repo/R4551/align/62-MYAAAA...   Breast   \n",
+       "2     MYAAAA08  /mnt/GS_NAS05/ECDTM_repo/R4551/align/16-MYAAAA...   Breast   \n",
+       "3     MYAAAA10  /mnt/GS_NAS05/ECDTM_repo/R4551/align/64-MYAAAA...   Breast   \n",
+       "4     MYAAAA11  /mnt/GS_NAS05/ECDTM_repo/R4563/align/43-MYAAAA...   Breast   \n",
+       "...        ...                                                ...      ...   \n",
+       "7381  K0AAAL02  /mnt/BACKUP_NAS05/ECDTM_repo/R4823/align/103-K...  Control   \n",
+       "7382  K0AAAL05  /mnt/GS_NAS05/ECDTM_repo/R4823/align/106-K0AAA...  Control   \n",
+       "7383  K0AAAL06  /mnt/GS_NAS05/ECDTM_repo/R4823/align/107-K0AAA...  Control   \n",
+       "7384  K0AAAL07  /mnt/BACKUP_NAS05/ECDTM_repo/R4823/align/108-K...  Control   \n",
+       "7385  K0AAAL09  /mnt/GS_NAS05/ECDTM_repo/R4839/align/90-K0AAAL...  Control   \n",
+       "\n",
+       "                           Set Run_TM Run_GW  \\\n",
+       "0     Recent_unseen2_GW_direct  R4551  R4551   \n",
+       "1     Recent_unseen2_GW_direct  R4551  R4551   \n",
+       "2     Recent_unseen2_GW_direct  R4551  R4551   \n",
+       "3     Recent_unseen2_GW_direct  R4551  R4551   \n",
+       "4     Recent_unseen2_GW_direct  R4563  R4563   \n",
+       "...                        ...    ...    ...   \n",
+       "7381            Recent_unseen4  R4823  R4823   \n",
+       "7382            Recent_unseen4  R4823  R4823   \n",
+       "7383            Recent_unseen4  R4823  R4823   \n",
+       "7384            Recent_unseen4  R4823  R4823   \n",
+       "7385            Recent_unseen4  R4839  R4839   \n",
+       "\n",
+       "                                                 TM_COV  \n",
+       "0     /mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...  \n",
+       "1     /mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...  \n",
+       "2     /mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...  \n",
+       "3     /mnt/GS_NAS05/ECDTM_repo/R4551/methylation_ext...  \n",
+       "4     /mnt/GS_NAS05/ECDTM_repo/R4563/methylation_ext...  \n",
+       "...                                                 ...  \n",
+       "7381  /mnt/BACKUP_NAS05/ECDTM_repo/R4823/methylation...  \n",
+       "7382  /mnt/GS_NAS05/ECDTM_repo/R4823/methylation_ext...  \n",
+       "7383  /mnt/GS_NAS05/ECDTM_repo/R4823/methylation_ext...  \n",
+       "7384  /mnt/BACKUP_NAS05/ECDTM_repo/R4823/methylation...  \n",
+       "7385  /mnt/GS_NAS05/ECDTM_repo/R4839/methylation_ext...  \n",
+       "\n",
+       "[7386 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
