--- a/01_methylKit_DMR_DML_data_analysis.full.Rmd
+++ b/01_methylKit_DMR_DML_data_analysis.full.Rmd
@@ -67,7 +67,7 @@ min.cov <- 5
 analysis.version <- "0.1"
 data.version <- "TMD_cov"
 output.version <- "20240907_full"
-input.cancer.class <- "Liver"
+input.cancer.class <- "Gastric"
 
 min.cov.bases <- configs[[analysis.version]]$min.cov.bases
 qvalue.cutoff <- configs[[analysis.version]]$qvalue.cutoff
@@ -241,7 +241,9 @@ pcadf <- merge(pcadf, meta.data, by.x = "SampleID", by.y = "cov.name")
 
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE, results='asis', fig.width=14, fig.height=10, include = TRUE}
-pcadf %>% ggplot(aes(x = PC1, y = PC2, color = Label)) + geom_point(size = 3) + scale_color_manual(values = c("gray", "red"))
+library(ggpubr)
+pcadf$Label <- factor(pcadf$Label, levels = c(input.cancer.class, "Control"))
+pcadf %>% ggplot(aes(x = PC1, y = PC2, color = Label)) + geom_point(size = 1) + scale_color_manual(values = c("red", "grey")) + theme_pubr(base_size = 15)
 ```
 
 ## Batch effects
