--- a/Py01_training_single_cancer_vs_control_readFeature.Control.ipynb
+++ b/Py01_training_single_cancer_vs_control_readFeature.Control.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 39\u001b[0m\n\u001b[1;32m     35\u001b[0m os\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmkdir -p \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(path_to_py01_output))\n\u001b[1;32m     37\u001b[0m all_read_files \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m pathlib\u001b[38;5;241m.\u001b[39mPath(path_to_read_data)\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m---> 39\u001b[0m sampling_control_samples \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241m.\u001b[39msample([item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m all_read_files \u001b[38;5;28;01mif\u001b[39;00m item\u001b[38;5;241m.\u001b[39mname[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mK\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclassify_read\u001b[39m(alpha, region):\n\u001b[1;32m     42\u001b[0m     region_type \u001b[38;5;241m=\u001b[39m check_region[check_region[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCpG\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m region][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregion_type\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [12:51<00:00,  7.72s/it]\n"
      ]
     }
    ],
@@ -44,59 +40,96 @@
     "thres_hypo = 0.3\n",
     "thres_hyper = 0.6\n",
     "\n",
-    "input_cancer_class = \"Liver\"\n",
-    "check_region = pd.read_excel(os.path.join(path_to_difftest_output, \"diff_test_{}_region_summary.xlsx\".format(input_cancer_class)))\n",
+    "for input_cancer_class in [\"Liver\", \"Lung\", \"Gastric\", \"CRC\", \"Breast\"]:\n",
+    "    check_region = pd.read_excel(os.path.join(path_to_difftest_output, \"diff_test_{}_region_summary.xlsx\".format(input_cancer_class)))\n",
     "\n",
-    "metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
+    "    metadata = pd.read_excel(\"metadata_cfDNA_lowpdepth_TMD_bam_cov.xlsx\")\n",
     "\n",
-    "path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions\"\n",
+    "    path_to_read_data = \"/media/hieunguyen/GSHD_HN01/raw_data/reads_from_450_regions\"\n",
     "\n",
-    "path_to_py01_output = os.path.join(path_to_main_output, \"py01_output\")\n",
-    "os.system(\"mkdir -p {}\".format(path_to_py01_output))\n",
+    "    path_to_py01_output = os.path.join(path_to_main_output, \"py01_output\")\n",
+    "    os.system(\"mkdir -p {}\".format(path_to_py01_output))\n",
     "\n",
-    "all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
+    "    all_read_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
     "\n",
-    "sampling_control_samples = random.sample([item for item in all_read_files if item.name[0] == \"K\"], 100)\n",
+    "    sampling_control_samples = random.sample([item for item in all_read_files if item.name[0] == \"K\"], 100)\n",
     "\n",
-    "def classify_read(alpha, region):\n",
-    "    region_type = check_region[check_region[\"CpG\"] == region][\"region_type\"].values[0]\n",
-    "    if region_type == \"hypo\":\n",
-    "        if alpha < thres_hypo:\n",
-    "            return \"candi\"\n",
+    "    def classify_read(alpha, region):\n",
+    "        region_type = check_region[check_region[\"CpG\"] == region][\"region_type\"].values[0]\n",
+    "        if region_type == \"hypo\":\n",
+    "            if alpha < thres_hypo:\n",
+    "                return \"candi\"\n",
+    "            else:\n",
+    "                return \"none\"\n",
+    "        elif region_type == \"hyper\":\n",
+    "            if alpha > thres_hyper:\n",
+    "                return \"candi\"\n",
+    "            else:\n",
+    "                return \"none\"\n",
+    "\n",
+    "    def assign_read_type(x, thres_hypo, thres_hyper):\n",
+    "        if x < thres_hypo:\n",
+    "            return \"hypo\"\n",
+    "        elif x > thres_hyper:\n",
+    "            return \"hyper\"\n",
     "        else:\n",
     "            return \"none\"\n",
-    "    elif region_type == \"hyper\":\n",
-    "        if alpha > thres_hyper:\n",
-    "            return \"candi\"\n",
+    "\n",
+    "    for file in tqdm(sampling_control_samples):\n",
+    "        if os.path.isfile(os.path.join(path_to_py01_output, \"{}_{}_vs_Control.candi_reads.csv\".format(file.name.split(\".\")[0], input_cancer_class))) == False:\n",
+    "            tmpdf = pd.read_csv(file, sep=\",\", index_col=0)\n",
+    "\n",
+    "            tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "            tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
+    "\n",
+    "            tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
+    "\n",
+    "            tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
+    "\n",
+    "            count_candi_reads = tmpdf.groupby([\"region\", \"read_classification\"])[\"methyl_string\"].count().reset_index().pivot(index = \"region\", columns = \"read_classification\", values = \"methyl_string\").fillna(0)\n",
+    "            count_candi_reads[\"fraction\"] = count_candi_reads[[\"candi\", \"none\"]].apply(lambda x: x[0]/(x[0] + x[1]), axis = 1)\n",
+    "\n",
+    "            count_candi_reads.to_csv(os.path.join(path_to_py01_output, \"{}_{}_vs_Control.candi_reads.csv\".format(file.name.split(\".\")[0], input_cancer_class)))\n",
     "        else:\n",
-    "            return \"none\"\n",
-    "\n",
-    "def assign_read_type(x, thres_hypo, thres_hyper):\n",
-    "    if x < thres_hypo:\n",
-    "        return \"hypo\"\n",
-    "    elif x > thres_hyper:\n",
-    "        return \"hyper\"\n",
-    "    else:\n",
-    "        return \"none\"\n",
-    "\n",
-    "for file in tqdm(sampling_control_samples):\n",
-    "    if os.path.isfile(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0]))) == False:\n",
-    "        tmpdf = pd.read_csv(file, sep=\",\", index_col=0)\n",
-    "\n",
-    "        tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
-    "        tmpdf = tmpdf[tmpdf[\"region\"].isin(check_region.CpG.unique())]\n",
-    "\n",
-    "        tmpdf[\"read_type\"] = tmpdf[\"alpha\"].apply(lambda x: assign_read_type(x, thres_hypo, thres_hyper))\n",
-    "\n",
-    "        tmpdf[\"read_classification\"] = tmpdf[[\"alpha\", \"region\"]].apply(lambda x: classify_read(x[0], x[1]), axis = 1)\n",
-    "\n",
-    "        count_candi_reads = tmpdf.groupby([\"region\", \"read_classification\"])[\"methyl_string\"].count().reset_index().pivot(index = \"region\", columns = \"read_classification\", values = \"methyl_string\").fillna(0)\n",
-    "        count_candi_reads[\"fraction\"] = count_candi_reads[[\"candi\", \"none\"]].apply(lambda x: x[0]/(x[0] + x[1]), axis = 1)\n",
-    "\n",
-    "        count_candi_reads.to_csv(os.path.join(path_to_py01_output, \"{}.candi_reads.csv\".format(file.name.split(\".\")[0])))\n",
-    "    else:\n",
-    "        print(\" File {} exists\".format(os.path.join(path_to_py01_output, \"{}_{}_vs_Control.candi_reads.csv\".format(file.name.split(\".\")[0], input_cancer_class))) )"
+    "            print(\" File {} exists\".format(os.path.join(path_to_py01_output, \"{}_{}_vs_Control.candi_reads.csv\".format(file.name.split(\".\")[0], input_cancer_class))) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_control_res = [item for item in pathlib.Path(os.path.join(path_to_py01_output)).glob(\"*_{}_vs_Control.candi_reads.csv\".format(input_cancer_class))]\n",
+    "all_control_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (201324574.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    os.path.join(path_to_py01_output)).glob(\"*_{}_vs_Control.candi_reads.csv\".format(input_cancer_class))\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
