--- a/archived/Py01_training_single_cancer_vs_control_readFeature.Control.ipynb
+++ b/archived/Py01_training_single_cancer_vs_control_readFeature.Control.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [12:51<00:00,  7.72s/it]\n"
+      "100%|██████████| 100/100 [14:31<00:00,  8.72s/it]\n",
+      "100%|██████████| 100/100 [15:13<00:00,  9.13s/it]\n",
+      "100%|██████████| 100/100 [07:18<00:00,  4.39s/it]\n",
+      "100%|██████████| 100/100 [08:11<00:00,  4.92s/it]\n",
+      "100%|██████████| 100/100 [00:27<00:00,  3.66it/s]\n"
      ]
     }
    ],
@@ -96,40 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_control_res = [item for item in pathlib.Path(os.path.join(path_to_py01_output)).glob(\"*_{}_vs_Control.candi_reads.csv\".format(input_cancer_class))]\n",
-    "all_control_res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (201324574.py, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'pahtlib' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    os.path.join(path_to_py01_output)).glob(\"*_{}_vs_Control.candi_reads.csv\".format(input_cancer_class))\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m liver_Control_files \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpahtlib\u001b[49m\u001b[38;5;241m.\u001b[39mPath(path_to_py01_output)\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*_\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m_vs_Control.candi_reads.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(input_cancer_class))]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pahtlib' is not defined"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "liver_Control_files = [item for item in pahtlib.Path(path_to_py01_output).glob(\"*_{}_vs_Control.candi_reads.csv\".format(input_cancer_class))]"
+   ]
   }
  ],
  "metadata": {
