--- a/07_generate_readdf_for_regions.ipynb
+++ b/07_generate_readdf_for_regions.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on input cancer class Liver\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 161/2332 [03:52<47:12,  1.30s/it]  "
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
