--- a/07_generate_readdf_for_regions.ipynb
+++ b/07_generate_readdf_for_regions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 161/2332 [03:52<47:12,  1.30s/it]  "
+      "100%|██████████| 2332/2332 [57:02<00:00,  1.47s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on input cancer class Gastric\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2346/2346 [49:30<00:00,  1.27s/it] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on input cancer class Lung\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2416/2416 [52:02<00:00,  1.29s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on input cancer class Breast\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2579/2579 [53:47<00:00,  1.25s/it]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on input cancer class CRC\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2439/2439 [50:13<00:00,  1.24s/it]  \n"
      ]
     }
    ],
