--- a/08_analysis_readdf_with_hyper_hypo_regions.ipynb
+++ b/08_analysis_readdf_with_hyper_hypo_regions.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'PosixPath' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m path_to_main_output \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(outdir, PROJECT, output_version)\n\u001b[1;32m     24\u001b[0m path_to_07_output \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(outdir, PROJECT, output_version, input_cancer_class, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthres_hypo_\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m_hyper_\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(thres_hypo, thres_hyper))\n\u001b[0;32m---> 26\u001b[0m all_read_files \u001b[38;5;241m=\u001b[39m [item \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m pathlib\u001b[38;5;241m.\u001b[39mPath(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path_to_07_output, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m))]\n\u001b[1;32m     27\u001b[0m all_read_files\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'PosixPath' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 2332 samples in the case Liver vs control\n",
+      "Number of TMD450 regions that have been tested by TCGA data: 274\n"
      ]
     }
    ],
@@ -41,10 +38,48 @@
     "input_cancer_class = \"Liver\"\n",
     "\n",
     "path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
+    "path_to_03_output = os.path.join(path_to_main_output, \"03_output\", input_cancer_class)\n",
     "path_to_07_output = os.path.join(outdir, PROJECT, output_version, input_cancer_class, \"thres_hypo_{}_hyper_{}\".format(thres_hypo, thres_hyper))\n",
     "\n",
     "all_read_files = [item for item in pathlib.Path(os.path.join(path_to_07_output)).glob(\"*.csv\")]\n",
-    "print(\"There are {} samples in the case {} vs control\".format(len(all_read_files), input_cancer_class))"
+    "print(\"There are {} samples in the case {} vs control\".format(len(all_read_files), input_cancer_class))\n",
+    "\n",
+    "testdf = pd.read_excel(os.path.join(path_to_03_output, \"countDMPs.xlsx\"))\n",
+    "\n",
+    "print(\"Number of TMD450 regions that have been tested by TCGA data: {}\".format(testdf.shape[0]))\n",
+    "\n",
+    "testdf[\"hypo_or_hyper\"] = testdf[[\"hyper\", \"hypo\"]].apply(lambda x: \"hyper\" if x[0] > x[1] else \"hypo\", axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = all_read_files[0]\n",
+    "tmpdf = pd.read_csv(file, index_col = [0])\n",
+    "tmpdf[\"region\"] = tmpdf[\"region\"].apply(lambda x: x.replace(\":\", \"_\").replace(\"-\", \"_\"))\n",
+    "tmpdf = tmpdf[tmpdf[\"region\"].isin(testdf.Var1.unique())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resdf = tmpdf.groupby([\"region\", \"read_classification\"]).seq.count().reset_index().pivot_table(index = \"region\", columns = \"read_classification\", values = \"seq\").reset_index().fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resdf[\"region_type\"] = resdf[\"region\"].apply(lambda x: testdf[testdf.Var1 == x].hypo_or_hyper.values[0])\n",
+    "resdf[\"candi_reads\"] = resdf[[\"region_type\", \"hyper\", \"hypo\"]].apply(lambda x: x[1] if x[0] == \"hyper\" else x[2], axis = 1)"
    ]
   }
  ],
