--- a/07_generate_readdf_for_regions.ipynb
+++ b/07_generate_readdf_for_regions.ipynb
@@ -103,7 +103,7 @@
     "    print(\"working on input cancer class {}\".format(input_cancer_class))\n",
     "\n",
     "    path_to_main_output = os.path.join(outdir, PROJECT, output_version)\n",
-    "    path_to_07_output = os.path.join(outdir, PROJECT, output_version, input_cancer_class, \"thres_hypo_{}_hyper_{}\".format(thres_hypo, thres_hyper))\n",
+    "    path_to_07_output = os.path.join(outdir, PROJECT, output_version, \"07_output\", input_cancer_class, \"thres_hypo_{}_hyper_{}\".format(thres_hypo, thres_hyper))\n",
     "    os.system(\"mkdir -p {}\".format(path_to_07_output))\n",
     "\n",
     "    path_to_main_src = pathlib.Path(\"/media/hieunguyen/HNSD01/src/tmd_features\")\n",
