--- a/08_summary_results.ipynb
+++ b/08_summary_results.ipynb
@@ -267,31 +267,38 @@
     "    candidf_test = candidf[candidf[\"Set\"] != \"train\"].copy()\n",
     "    \n",
     "    # Calculate the ROC curve for the values ratio_raw\n",
-    "    def plot_roc_curve(inputdf, figname1, figname2):\n",
+    "    def plot_roc_curve(inputdf, figname1, figname2, selected_spec_ratio_raw = None, selected_spec_ratio_in_reads = None):\n",
     "        fpr_ratio_raw, tpr_ratio_raw, thres_ratio_raw = roc_curve(inputdf['Label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['ratio_raw'])\n",
-    "        aucdf = pd.DataFrame({\"fpr\": fpr_ratio_raw, \"tpr\": tpr_ratio_raw, \"thres\": thres_ratio_raw})\n",
-    "        aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
+    "        \n",
+    "        if (selected_spec_ratio_raw is None) or (selected_spec_ratio_in_reads is None):\n",
+    "            aucdf = pd.DataFrame({\"fpr\": fpr_ratio_raw, \"tpr\": tpr_ratio_raw, \"thres\": thres_ratio_raw})\n",
+    "            aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
     "\n",
-    "        selected_thres_ratio_raw = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].thres.values[0]\n",
-    "        selected_spec_ratio_raw = 1 - aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].fpr.values[0]\n",
-    "        selected_sens_ratio_raw = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].tpr.values[0]\n",
+    "            selected_thres_ratio_raw = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].thres.values[0]\n",
+    "            selected_spec_ratio_raw = 1 - aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].fpr.values[0]\n",
+    "            selected_sens_ratio_raw = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].tpr.values[0]\n",
     "\n",
-    "        # Calculate the AUC\n",
-    "        roc_auc = auc(fpr_ratio_raw, tpr_ratio_raw)\n",
-    "        title_raw = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
+    "            # Calculate the AUC\n",
+    "            roc_auc = auc(fpr_ratio_raw, tpr_ratio_raw)\n",
+    "            title_raw = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
     "\n",
-    "        # Calculate the ROC curve for the values ratio_in_reads\n",
-    "        fpr_ratio_in_reads, tpr_ratio_in_reads, thres_ratio_in_reads = roc_curve(inputdf['Label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['ratio_in_reads'])\n",
-    "        aucdf = pd.DataFrame({\"fpr\": fpr_ratio_in_reads, \"tpr\": tpr_ratio_in_reads, \"thres\": thres_ratio_in_reads})\n",
-    "        aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
+    "            # Calculate the ROC curve for the values ratio_in_reads\n",
+    "            fpr_ratio_in_reads, tpr_ratio_in_reads, thres_ratio_in_reads = roc_curve(inputdf['Label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['ratio_in_reads'])\n",
+    "            aucdf = pd.DataFrame({\"fpr\": fpr_ratio_in_reads, \"tpr\": tpr_ratio_in_reads, \"thres\": thres_ratio_in_reads})\n",
+    "            aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
     "\n",
-    "        selected_thres_ratio_in_reads = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].thres.values[0]\n",
-    "        selected_spec_ratio_in_reads = 1 - aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].fpr.values[0]\n",
-    "        selected_sens_ratio_in_reads = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].tpr.values[0]\n",
+    "            selected_thres_ratio_in_reads = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].thres.values[0]\n",
+    "            selected_spec_ratio_in_reads = 1 - aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].fpr.values[0]\n",
+    "            selected_sens_ratio_in_reads = aucdf_95[aucdf_95[\"tpr\"] == aucdf_95[\"tpr\"].max()].tpr.values[0]\n",
     "\n",
-    "        # Calculate the AUC\n",
-    "        roc_auc = auc(fpr_ratio_in_reads, tpr_ratio_in_reads)\n",
-    "        title_in_reads = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
+    "            # Calculate the AUC\n",
+    "            roc_auc = auc(fpr_ratio_in_reads, tpr_ratio_in_reads)\n",
+    "            title_in_reads = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
+    "        else:\n",
+    "            inputdf[\"prediction_raw\"] = inputdf[\"ratio_raw\"].apply(lambda x: 1 if x >= selected_spec_ratio_raw else 0)\n",
+    "            inputdf[\"prediction_in_reads\"] = inputdf[\"ratio_in_reads\"].apply(lambda x: 1 if x >= selected_spec_ratio_in_reads else 0)\n",
+    "            title_raw = f\"SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
+    "            title_in_reads = f\"SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
     "\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.boxplot(data=inputdf, x=\"Label\", y=\"ratio_raw\", hue=\"Set\")\n",
@@ -313,6 +320,218 @@
     "    plot_roc_curve(candidf_test, \"boxplot_ratio_candi_to_raw_counts.train.svg\", \"boxplot_ratio_candi_to_inside_read_counts.train.svg\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputdf = candidf_train.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SampleID</th>\n",
+       "      <th>num_candi_reads</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>in_read_count</th>\n",
+       "      <th>ratio_raw</th>\n",
+       "      <th>ratio_in_reads</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Set</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LBC018</td>\n",
+       "      <td>6.315217</td>\n",
+       "      <td>41512</td>\n",
+       "      <td>20030</td>\n",
+       "      <td>0.000152</td>\n",
+       "      <td>0.000315</td>\n",
+       "      <td>CRC</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K0657R1</td>\n",
+       "      <td>5.345455</td>\n",
+       "      <td>30355</td>\n",
+       "      <td>15807</td>\n",
+       "      <td>0.000176</td>\n",
+       "      <td>0.000338</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KABR51</td>\n",
+       "      <td>6.443223</td>\n",
+       "      <td>43197</td>\n",
+       "      <td>20630</td>\n",
+       "      <td>0.000149</td>\n",
+       "      <td>0.000312</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KZAK09</td>\n",
+       "      <td>8.703971</td>\n",
+       "      <td>50666</td>\n",
+       "      <td>25459</td>\n",
+       "      <td>0.000172</td>\n",
+       "      <td>0.000342</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>KZAB12</td>\n",
+       "      <td>5.393502</td>\n",
+       "      <td>34007</td>\n",
+       "      <td>16945</td>\n",
+       "      <td>0.000159</td>\n",
+       "      <td>0.000318</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6195</th>\n",
+       "      <td>KZAW35</td>\n",
+       "      <td>4.752727</td>\n",
+       "      <td>29785</td>\n",
+       "      <td>14267</td>\n",
+       "      <td>0.000160</td>\n",
+       "      <td>0.000333</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6196</th>\n",
+       "      <td>K0AE32</td>\n",
+       "      <td>4.413043</td>\n",
+       "      <td>25615</td>\n",
+       "      <td>12432</td>\n",
+       "      <td>0.000172</td>\n",
+       "      <td>0.000355</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6197</th>\n",
+       "      <td>KZAG12</td>\n",
+       "      <td>2.347826</td>\n",
+       "      <td>14436</td>\n",
+       "      <td>6865</td>\n",
+       "      <td>0.000163</td>\n",
+       "      <td>0.000342</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6198</th>\n",
+       "      <td>K1232</td>\n",
+       "      <td>10.193548</td>\n",
+       "      <td>58201</td>\n",
+       "      <td>29918</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000341</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6203</th>\n",
+       "      <td>KABS90</td>\n",
+       "      <td>4.372694</td>\n",
+       "      <td>24526</td>\n",
+       "      <td>11829</td>\n",
+       "      <td>0.000178</td>\n",
+       "      <td>0.000370</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2439 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SampleID  num_candi_reads  raw_count  in_read_count  ratio_raw  \\\n",
+       "0      LBC018         6.315217      41512          20030   0.000152   \n",
+       "2     K0657R1         5.345455      30355          15807   0.000176   \n",
+       "4      KABR51         6.443223      43197          20630   0.000149   \n",
+       "5      KZAK09         8.703971      50666          25459   0.000172   \n",
+       "6      KZAB12         5.393502      34007          16945   0.000159   \n",
+       "...       ...              ...        ...            ...        ...   \n",
+       "6195   KZAW35         4.752727      29785          14267   0.000160   \n",
+       "6196   K0AE32         4.413043      25615          12432   0.000172   \n",
+       "6197   KZAG12         2.347826      14436           6865   0.000163   \n",
+       "6198    K1232        10.193548      58201          29918   0.000175   \n",
+       "6203   KABS90         4.372694      24526          11829   0.000178   \n",
+       "\n",
+       "      ratio_in_reads    Label    Set  \n",
+       "0           0.000315      CRC  train  \n",
+       "2           0.000338  Control  train  \n",
+       "4           0.000312  Control  train  \n",
+       "5           0.000342  Control  train  \n",
+       "6           0.000318  Control  train  \n",
+       "...              ...      ...    ...  \n",
+       "6195        0.000333  Control  train  \n",
+       "6196        0.000355  Control  train  \n",
+       "6197        0.000342  Control  train  \n",
+       "6198        0.000341  Control  train  \n",
+       "6203        0.000370  Control  train  \n",
+       "\n",
+       "[2439 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if pre_defined_thres is not None:\n",
+    "    "
    ]
   }
  ],
