--- a/08_summary_results.ipynb
+++ b/08_summary_results.ipynb
@@ -269,7 +269,9 @@
     "    # Calculate the ROC curve for the values ratio_raw\n",
     "    def plot_roc_curve(inputdf, figname1, figname2, selected_spec_ratio_raw = None, selected_spec_ratio_in_reads = None):\n",
     "        fpr_ratio_raw, tpr_ratio_raw, thres_ratio_raw = roc_curve(inputdf['Label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['ratio_raw'])\n",
-    "        \n",
+    "        num_cancer = inputdf[inputdf[\"Label\"] == input_cancer_class].shape[0]\n",
+    "        num_control = inputdf[inputdf[\"Label\"] != input_cancer_class].shape[0]\n",
+    "\n",
     "        if (selected_spec_ratio_raw is None) or (selected_spec_ratio_in_reads is None):\n",
     "            aucdf = pd.DataFrame({\"fpr\": fpr_ratio_raw, \"tpr\": tpr_ratio_raw, \"thres\": thres_ratio_raw})\n",
     "            aucdf_95 = aucdf[aucdf[\"fpr\"] <= 0.05]\n",
@@ -280,7 +282,7 @@
     "\n",
     "            # Calculate the AUC\n",
     "            roc_auc = auc(fpr_ratio_raw, tpr_ratio_raw)\n",
-    "            title_raw = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
+    "            title_raw = f\"{input_cancer_class}: {num_cancer} vs Control {num_control}, \\n AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
     "\n",
     "            # Calculate the ROC curve for the values ratio_in_reads\n",
     "            fpr_ratio_in_reads, tpr_ratio_in_reads, thres_ratio_in_reads = roc_curve(inputdf['Label'].apply(lambda x: 1 if x == input_cancer_class else 0), inputdf['ratio_in_reads'])\n",
@@ -293,12 +295,19 @@
     "\n",
     "            # Calculate the AUC\n",
     "            roc_auc = auc(fpr_ratio_in_reads, tpr_ratio_in_reads)\n",
-    "            title_in_reads = f\"AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
+    "            title_in_reads = f\"{input_cancer_class}: {num_cancer} vs Control {num_control}, \\n AUC: {roc_auc:.2f}, SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
     "        else:\n",
     "            inputdf[\"prediction_raw\"] = inputdf[\"ratio_raw\"].apply(lambda x: 1 if x >= selected_spec_ratio_raw else 0)\n",
     "            inputdf[\"prediction_in_reads\"] = inputdf[\"ratio_in_reads\"].apply(lambda x: 1 if x >= selected_spec_ratio_in_reads else 0)\n",
-    "            title_raw = f\"SEN: {selected_sens_ratio_raw:.2f}, SPEC: {selected_spec_ratio_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
-    "            title_in_reads = f\"SEN: {selected_sens_ratio_in_reads:.2f}, SPEC: {selected_spec_ratio_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
+    "            \n",
+    "            SEN_raw = inputdf[(inputdf[\"prediction_raw\"] == 1) & (input[\"Label\"] == input_cancer_class)].shape[0]/inputdf.shape[0]\n",
+    "            SPEC_raw = inputdf[(inputdf[\"prediction_raw\"] == 0) & (input[\"Label\"] != input_cancer_class)].shape[0]/inputdf.shape[0]\n",
+    "\n",
+    "            SEN_in_reads = inputdf[(inputdf[\"prediction_in_reads\"] == 1) & (input[\"Label\"] == input_cancer_class)].shape[0]/inputdf.shape[0]\n",
+    "            SPEC_in_reads = inputdf[(inputdf[\"prediction_in_reads\"] == 0) & (input[\"Label\"] != input_cancer_class)].shape[0]/inputdf.shape[0]\n",
+    "\n",
+    "            title_raw = f\"{input_cancer_class}: {num_cancer} vs Control {num_control}, \\n SEN: {SEN_raw:.2f}, SPEC: {SPEC_raw:.2f}, THRES: {selected_thres_ratio_raw:.2f}\"\n",
+    "            title_in_reads = f\"{input_cancer_class}: {num_cancer} vs Control {num_control}, \\n SEN: {SEN_in_reads:.2f}, SPEC: {SPEC_in_reads:.2f}, THRES: {selected_thres_ratio_in_reads:.2f}\"\n",
     "\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.boxplot(data=inputdf, x=\"Label\", y=\"ratio_raw\", hue=\"Set\")\n",
@@ -324,16 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputdf = candidf_train.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -524,14 +524,13 @@
        "[2439 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "if pre_defined_thres is not None:\n",
-    "    "
+    "inputdf"
    ]
   }
  ],
