--- a/GW_like_features/01_pilot.ipynb
+++ b/GW_like_features/01_pilot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,9 @@
     "os.system(f\"mkdir -p {path_to_main_output}\")\n",
     "\n",
     "all_files = [item for item in pathlib.Path(path_to_read_data).glob(\"*.csv\")]\n",
-    "print(f\"Number of samples in this folder: {len(all_files)}\")"
+    "print(f\"Number of samples in this folder: {len(all_files)}\")\n",
+    "\n",
+    "available_samples = [item.name.split(\"/\")[-1].split(\".sorted\")[0] for item in all_files]"
    ]
   },
   {
@@ -76,6 +78,41 @@
     "flen_methyl = tmpdf[tmpdf[\"region\"] == region][[\"flen\", \"alpha\"]]\n",
     "flen_methyl = flen_methyl[(flen_methyl[\"flen\"] <= 250) & (flen_methyl[\"flen\"] >= 50)]\n",
     "sns.scatterplot(flen_methyl, x = \"flen\", y = \"alpha\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Label\n",
+       "Breast                   453\n",
+       "CRC                      377\n",
+       "Control                 5827\n",
+       "Gastric                  159\n",
+       "Liver                    136\n",
+       "Lung                     293\n",
+       "Ovarian cancer             1\n",
+       "Pancreatic cancer          5\n",
+       "benign breast              3\n",
+       "benign gastric            10\n",
+       "benign lung                1\n",
+       "multiple benign            8\n",
+       "no lesions                 9\n",
+       "other benign lesions       7\n",
+       "Name: SampleID, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata[metadata[\"SampleID\"].isin(available_samples)].groupby(\"Label\")[\"SampleID\"].count()"
    ]
   }
  ],
