--- a/GW_like_features/01_pilot.ipynb
+++ b/GW_like_features/01_pilot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "<Axes: xlabel='flen', ylabel='alpha'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +106,41 @@
        "Name: SampleID, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "metadata[metadata[\"SampleID\"].isin(available_samples)].groupby(\"Label\")[\"SampleID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mnt/BACKUP_NAS05/ECDTM_repo/R4204',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/Sub50_batch3',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/Sub75_batch2',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/Sub75a',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/TestECD_20X',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/ecdtm_research',\n",
+       " 'mnt/BACKUP_NAS05/ECDTM_repo/test_batch_Moss_Dor'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_samples = pd.read_csv(\"/media/hieunguyen/HNSD01/src/tmd_features/tmp_missing_samples.txt\", header = None)\n",
+    "\n",
+    "set([\"/\".join(item.split(\"/\")[1:-1]).replace(\"/align\", \"\") for item in metadata[metadata[\"SampleID\"].isin(missing_samples[0].values)].TM_BAM.values])"
    ]
   }
  ],
